--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,27 @@
+@import url(//db.onlinewebfonts.com/c/415c1cffdc1ffdf955cdd328ad4a4c87?family=Cheltenham);
+
+@font-face {font-family: "Cheltenham";
+  src: url("//db.onlinewebfonts.com/t/415c1cffdc1ffdf955cdd328ad4a4c87.eot");
+  src: url("//db.onlinewebfonts.com/t/415c1cffdc1ffdf955cdd328ad4a4c87.eot?#iefix") format("embedded-opentype"),
+  url("//db.onlinewebfonts.com/t/415c1cffdc1ffdf955cdd328ad4a4c87.woff2") format("woff2"),
+  url("//db.onlinewebfonts.com/t/415c1cffdc1ffdf955cdd328ad4a4c87.woff") format("woff"),
+  url("//db.onlinewebfonts.com/t/415c1cffdc1ffdf955cdd328ad4a4c87.ttf") format("truetype"),
+  url("//db.onlinewebfonts.com/t/415c1cffdc1ffdf955cdd328ad4a4c87.svg#Cheltenham") format("svg");
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+
+  background-color: black;
+  color: white;
+  width: 100%;
+  margin: 20%, 50%, 60%, 50%;
+  padding: 80px;
+  font-family: Georgia, nyt-cheltenham;
+}
+.player-container {
+  text-align: center;
+  background-color: #222222;
+  font-family: Cheltenham ,Georgia;
+  font-size: large;
+  width: 70%;
 }
