--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* Font Family */
 @import url(//db.onlinewebfonts.com/c/415c1cffdc1ffdf955cdd328ad4a4c87?family=Cheltenham);
 
 @font-face {font-family: "Cheltenham";
@@ -9,19 +10,130 @@
   url("//db.onlinewebfonts.com/t/415c1cffdc1ffdf955cdd328ad4a4c87.svg#Cheltenham") format("svg");
 }
 
-body {
 
+/* Tablet */
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+  .container { width:556px; }
+}
+
+/* Mobile */
+
+@media only screen and (max-width: 767px) {
+  .container { width:300px; }
+}
+
+ /* Mobile Landscape */
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  .container { width:420px; }
+}
+
+/* CSS Reset */
+
+html,body,div,span,h1,h3,ul,li {
+  border:0;
+  font:inherit;
+  font-size:100%;
+  margin:0;
+  padding:0;
+  vertical-align:baseline;
+}
+
+body { line-height:1; }
+ul { list-style:none; }
+
+/* Basic Styles */
+
+html, body {
+  -webkit-font-smoothing:antialiased;
+  -webkit-text-size-adjust:100%;
   background-color: black;
-  color: white;
+  color:#C8C7C8;
   width: 100%;
   margin: 20%, 50%, 60%, 50%;
   padding: 80px;
-  font-family: Georgia, nyt-cheltenham;
+  font-family: Cheltenham, Georgia;
+  font-weight:300;
+  padding:5px 0;
+
 }
-.player-container {
-  text-align: center;
-  background-color: #222222;
-  font-family: Cheltenham ,Georgia;
-  font-size: large;
+* {
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
+  -webkit-tap-highlight-color:transparent;
+}
+
+/* Typography */
+
+h1, h3 { color: #ffffff; font-weight: 200; }
+
+h1 {
+  font-size: 48px;
+  line-height: 56px;
+  margin: 20px 0 0 ;
+}
+
+h3 {
+  min-height: 3em;
+  line-height: 40px;
+  margin: 4px 0 20px;
+  font-size: 24px;
   width: 70%;
 }
+
+/* CSS Transitions */
+* {
+-moz-transition:all 100ms ease;
+-o-transition:all 100ms ease;
+-webkit-transition:all 100ms ease;
+transition:all 100ms ease;
+}
+
+/* Highlight Styles */
+::selection { background-color:#262223; color:#444; }
+::-moz-selection { background-color:#262223; color:#444; }
+
+
+
+.app {
+  position: relative;
+  margin: 0 auto;
+  width: 700px;
+}
+.app > h1 {
+  text-align: center;
+  font-family: Cheltenham ,Georgia;
+  font-weight: 700;
+  font-size: 50px;
+  width: 70%;
+}
+
+/* Article List */
+.article-list {
+  margin: 0;
+}
+
+/* Article List Item */
+.article-list-item {
+  background-color: #111;
+}
+
+/* Player */
+.player {
+  background-color:#111;
+  font-family: Cheltenham ,Georgia;
+  margin: 60px 0 20px;
+  width: 70%;
+}
+.player h3 {
+  text-align: left;
+  line-height: 40px;
+  font-size: 32px;
+  padding: 10px 0px 20px;
+
+}
+.player span {
+
+}
+
+
+
