--- a/src/index.css
+++ b/src/index.css
@@ -47,32 +47,41 @@
     overflow: auto;
   }
 
-  .player h3 {
-    width: 90%;
-    height: 50%;
-    line-height: 20px;
-    font-size: 16px;
-    overflow: hidden;
-    padding: 2.5% 5% 5% 5%;
-
-  }
-  .player span {
-    margin-top: 10%;
-    width: 40%;
-    height: 40%;
-    -moz-border-radius: 20%;
-    -webkit-border-radius: 20%;
-    background: transparent;
-    border: solid #070606;
+  /* Button state */
+  .play {
+    height:60px;
+    width:60px;
+    background: url("../assets/play-icon-300.png");
+    background-size: 100%;
+    background-position: center;
+    border-radius: 50%;
+    -moz-border-radius: 5%0;
+    -webkit-border-radius: 50%;
+    border: 2px solid white;
     cursor: pointer;
-    font-size: 30px;
 
   }
-  .player:hover {
+  .paused {
+    height:60px;
+    width:60px;
+    background: url("../assets/paused-button.png");
+    background-size: 100%;
+    background-position: center;
+    border-radius: 50%;
+    -moz-border-radius: 5%0;
+    -webkit-border-radius: 50%;
+    border: 2px solid white;
+    cursor: pointer;
+  }
+
+  .player:active {
     background-color: #231F20;
   }
-  .player span.on:active {
-    content: "Hide";
+  .player button:active {
+    background-color: white;
+  }
+  .player button:hover {
+    transform: scale(1.1);
   }
 
 }
@@ -95,162 +104,175 @@ html,body,div,span,h1,h3,ul,li {
 body { line-height: 1; width: 1224px;}
 ul { list-style:none; }
 
-@media only screen and (min-width: 768px)  and (max-width: 2048px) {
+/* Desktop */
 
-/* Basic Styles */
+@media only screen and (min-width: 992px)  and (max-width: 2048px) {
 
-html, body {
-  -webkit-font-smoothing:antialiased;
-  -webkit-text-size-adjust:100%;
-  background-color: black;
-  color:#C8C7C8;
-  width: 100%;
-  font-family: Cheltenham, Georgia;
-  font-weight:700;
-}
-* {
-  -webkit-tap-highlight-color:rgba(0,0,0,0);
-  -webkit-tap-highlight-color:transparent;
-}
+  /* Basic Styles */
 
-/* Typography */
+  html, body {
+    -webkit-font-smoothing:antialiased;
+    -webkit-text-size-adjust:100%;
+    background-color: black;
+    color:#C8C7C8;
+    width: 100%;
+    font-family: Cheltenham, Georgia;
+    font-weight:700;
+  }
+  * {
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
+    -webkit-tap-highlight-color:transparent;
+  }
 
-h1, h3 { color: #ffffff; font-weight: 500; margin: 0 auto;}
+  /* Typography */
 
-h1 {
-  text-align: center;
-  font-size: 46px;
-  line-height: 50px;
-  margin: 40px auto 30px;
-  font-weight: 700;
-}
-h3 {
-  min-height: 3em;
-  line-height: 40px;
-  font-size: 24px;
-  width: 100%;
-}
-div.article-list-item {
-  width: 25%;
-  height: 25%;
-}
+  h1, h3 { color: #ffffff; font-weight: 500; margin: 0 auto;}
 
+  h1 {
+    text-align: center;
+    font-size: 46px;
+    line-height: 50px;
+    margin: 40px auto 30px;
+    font-weight: 700;
+  }
+  h3 {
+    min-height: 3em;
+    line-height: 40px;
+    font-size: 24px;
+    width: 100%;
+  }
+  p {
+    text-align: left;
+    font-size: 12px;
+  }
 
-/* CSS Transitions */
+  /* CSS Transitions */
 
-* {
--moz-transition:all 100ms ease;
--o-transition:all 100ms ease;
--webkit-transition:all 100ms ease;
-transition:all 100ms ease;
-}
+  * {
+  -moz-transition:all 100ms ease;
+  -o-transition:all 100ms ease;
+  -webkit-transition:all 100ms ease;
+  transition:all 100ms ease;
+  }
 
-/* Highlight Styles */
-::selection { background-color:#262223; color:#444; }
-::-moz-selection { background-color:#262223; color:#444; }
+  /* Highlight Styles */
+  ::selection { background-color:#262223; color:#444; }
+  ::-moz-selection { background-color:#262223; color:#444; }
 
-.app {
-  dispaly: block;
-  margin: 0 auto;
-  width: 100%px;
-}
+  .app {
+    dispaly: block;
+    margin: 0 auto;
+    width: 100%px;
+  }
 
-/* Player */
+  /* Player */
 
   .player {
-  background-color: #090909;
-  font-family: Cheltenham ,Georgia;
-  margin: 0 auto;
-  width: 25%;
-  height: 10%;
-  text-align: center;
-}
+    background-color: #090909;
+    font-family: Cheltenham ,Georgia;
+    margin: 0 auto 1.5%;
+    width: 25%;
+    height: 10%;
+    text-align: center;
 
-.player h3 {
-  line-height: 30px;
-  font-size: 30px;
-  padding: 10px 0px 10px 0px;
-  text-align: center;
-  overflow: hidden;
+  }
 
-}
+  .player h3 {
+    line-height: 30px;
+    font-size: 30px;
+    padding: 10px 0px 10px 0px;
+    text-align: center;
+    overflow: hidden;
 
-/* Button state */
-.play {
-  height:60px;
-  width:60px;
-  background: url("../play-icon-300.png");
-  background-size: 100%;
-  background-position: center;
-  border-radius: 50%;
-  border: 2px solid white;
+  }
+  .player p {
+    font-size: 10px;
+    text-align: center;
+  }
+  /* Button state */
+  .player button {
+    margin: 3% auto 1.5%;
+  }
 
-  /*width: 5%;*/
-  /*height: 5%;*/
-  /*-moz-border-radius: 5%;*/
-  /*-webkit-border-radius: 5%;*/
-  /*border-radius: 5%;*/
-  /*background: white;*/
-  /*border: solid #070606;*/
-  /*cursor: pointer;*/
-  /*font-size: 22px;*/
+  .play {
+    height:60px;
+    width:60px;
+    background: url("../assets/play-icon-300.png");
+    background-size: 100%;
+    background-position: center;
+    border-radius: 50%;
+    -moz-border-radius: 5%0;
+    -webkit-border-radius: 50%;
+    border: 2px solid white;
+    cursor: pointer;
 
-}
-.paused {
-  height:60px;
-  width:60px;
-  background: url("../paused-button.png");
-  background-size: 100%;
-  background-position: center;
-  border-radius: 50%;
-  border: 2px solid white;
-}
+  }
+  .paused {
+    height:60px;
+    width:60px;
+    background: url("../assets/paused-button.png");
+    background-size: 100%;
+    background-position: center;
+    border-radius: 50%;
+    -moz-border-radius: 5%0;
+    -webkit-border-radius: 50%;
+    border: 2px solid white;
+    cursor: pointer;
+  }
 
-.player:active {
-  background-color: #231F20;
-}
-.player button:active {
-  background-color: white;
-}
+  .player:active {
+    background-color: #231F20;
+  }
+  .player button:active {
+    background-color: white;
+  }
+  .player button:hover {
+    transform: scale(1.1);
+  }
 
-/* Article List */
-.article-list {
-  align-text:left;
-  -webkit-columns: 1;
-  -moz-columns: 1;
-  columns: 1;
-  -webkit-column-gap: 1.5em;
-  -moz-column-gap: 1.5em;
-  column-gap: 1.5em;
-  -webkit-column-width: 10%;
-  -moz-column-width: 10%;
-  column-width: 10%;
-  -webkit-column-height: 10%;
-  -moz-column-height: 10%;
-  column-height: 10%;
-  width: 100%;
-  height: 15%;
-}
+  /* Article List */
+  .article-list {
+    align-text:left;
+    -webkit-columns: 1;
+    -moz-columns: 1;
+    columns: 1;
+    -webkit-column-gap: 1.5em;
+    -moz-column-gap: 1.5em;
+    column-gap: 1.5em;
+    -webkit-column-width: 10%;
+    -moz-column-width: 10%;
+    column-width: 10%;
+    -webkit-column-height: 10%;
+    -moz-column-height: 10%;
+    column-height: 10%;
+    width: 100%;
+    height: 15%;
+  }
 
-/* Article List Item */
+  /* Article List Item */
 
-.list-item {
-  background-color: #090909;
-  display: inline-block;
-  margin: 0 auto;
-  cursor: pointer;
+  .list-item {
+    background-color: #090909;
+    display: inline-block;
+    margin: 0 auto;
+    cursor: pointer;
 
-}
-.list-item h3 {
-  text-align: left;
-  font-size: 28px;
-  height:40%;
-  width: 90%;
-  padding: 5% 2.5% 5% 2.5%;
-}
-.list-item:hover {
-  background-color: #181818;
-}
+  }
+  .list-item h3 {
+    text-align: left;
+    font-size: 28px;
+    height:40%;
+    width: 90%;
+    padding: 5% 2.5% 5% 2.5%;
+  }
+  .list-item:hover {
+    background-color: #181818;
+    transform: scale(1.05);
+  }
+    div.article-list-item {
+      width: 25%;
+      height: 25%;
+    }
 }
 /* Mixins */
 @mixin generate-gradient($color,$amount) {
