--- a/src/index.css
+++ b/src/index.css
@@ -188,7 +188,9 @@ ul { list-style:none; }
   }
   .player p {
     font-size: 10px;
+    font-weight: 500;
     text-align: center;
+    letter-spacing: 1px;
   }
   /* Button state */
   .player button {
