--- a/src/index.css
+++ b/src/index.css
@@ -17,17 +17,25 @@
   .container { width:556px; }
 }
 
-/* Mobile */
+
+
+
+/* ----------------------- Mobile ------------------------ */
 
 @media only screen and (min-width: 300px) and (max-width: 440px) {
+
+
+
   /* Basic Styles */
 
   html, body {
     -webkit-font-smoothing:antialiased;
-    /*-webkit-text-size-adjust:100%;*/
+    -webkit-text-size-adjust:100%;
     background-color: black;
     color:#C8C7C8;
-    width: 20%;
+    width: 100%;
+    height: 100%;
+    margin: 0;
     font-family: Cheltenham, Georgia;
     font-weight:700;
   }
@@ -36,18 +44,80 @@
     -webkit-tap-highlight-color:transparent;
   }
 
-  /* Player */
-  .player {
-    background-color:#070606;
-    font-family: Cheltenham ,Georgia;
-    margin: 0 auto;
-    width: 20%;
-    height: 10%;
+  /* Typography */
+
+  h1, h3 { color: #ffffff; font-weight: 500; margin: 0 auto; }
+
+  h1 {
     text-align: center;
-    overflow: auto;
+    line-height: 46px;
+    margin: 0;
+    font-weight: 700;
+  }
+  h3 {
+    line-height: 30px;
+    font-size: 30px;
+    width: 100%;
+  }
+  p {
+    text-align: left;
+    font-size: 10px;
+    margin-left: 2.5%;
+    letter-spacing: 1px;
+    font-weight: 500;
   }
 
+  /* CSS Transitions */
+
+  * {
+    -moz-transition:all 100ms ease;
+    -o-transition:all 100ms ease;
+    -webkit-transition:all 100ms ease;
+    transition:all 100ms ease;
+  }
+
+  /* Highlight Styles */
+  ::selection { background-color:#262223; color:#444; }
+  ::-moz-selection { background-color:#262223; color:#444; }
+
+  .app {
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+  }
+
+  .app h1 {
+    font-size: 36px;
+    padding-top: 3%;
+    padding-bottom: 8%;
+  }
+
+  /* Player */
+
+  .player {
+    background-color: #090909;
+    font-family: Cheltenham ,Georgia;
+    margin: 0 auto 10%;
+    width: 100%;
+    height: 10%;
+    text-align: center;
+  }
+
+  .player h3 {
+    font-size: 26px;
+    padding: 5px 0px 5px 0px;
+    text-align: center;
+    overflow: hidden;
+
+  }
+  .player p {
+    text-align: center;
+  }
   /* Button state */
+  .player button {
+    margin: 3% auto 1.5%;
+  }
+
   .play {
     height:60px;
     width:60px;
@@ -74,14 +144,58 @@
     cursor: pointer;
   }
 
-  .player:active {
-    background-color: #231F20;
-  }
   .player button:active {
-    background-color: white;
+    /*background-color: #231F20;*/
+    transform: scale(1.05);
   }
-  .player button:hover {
-    transform: scale(1.1);
+
+  /* Article List */
+  .article-list {
+    align-text:left;
+    -webkit-columns: 1;
+    -moz-columns: 1;
+    columns: 1;
+    -webkit-column-gap: 1.5em;
+    -moz-column-gap: 1.5em;
+    column-gap: 1.5em;
+    -webkit-column-width: 100%;
+    -moz-column-width: 100%;
+    column-width: 100%;
+    -webkit-column-height: 20%;
+    -moz-column-height: 20%;
+    column-height: 20%;
+    width: 100%;
+    height: 30%;
+    margin: 2% auto 10%;
+    /*margin-bottom: 3%;*/
+  }
+
+  /* Article List Item */
+
+  .list-item {
+    background-color: #090909;
+    display: inline-block;
+    margin: 0 auto;
+    cursor: pointer;
+    width: 100%;
+    height: 60%;
+
+  }
+  .list-item h3 {
+    text-align: left;
+    font-size: 28px;
+    height:40%;
+    width: 100%;
+    padding: 5% 2.5% 5% 2.5%;
+  }
+
+  .list-item:active {
+    background-color: #181818;
+    transform: scale(1.025);
+  }
+  div.article-list-item {
+    width: 100%;
+    height: 25%;
   }
 
 }
@@ -101,10 +215,11 @@ html,body,div,span,h1,h3,ul,li {
   /*vertical-align:baseline;*/
 }
 
-body { line-height: 1; width: 1224px;}
-ul { list-style:none; }
 
-/* Desktop */
+
+
+
+/* -------------------- Desktop ------------------------- */
 
 @media only screen and (min-width: 992px)  and (max-width: 2048px) {
 
@@ -116,6 +231,8 @@ ul { list-style:none; }
     background-color: black;
     color:#C8C7C8;
     width: 100%;
+    height: 100%;
+    margin: 0;
     font-family: Cheltenham, Georgia;
     font-weight:700;
   }
@@ -130,9 +247,11 @@ ul { list-style:none; }
 
   h1 {
     text-align: center;
-    font-size: 46px;
-    line-height: 50px;
-    margin: 40px auto 30px;
+    font-size: 56px;
+    line-height: 60px;
+    padding-top: 2%;
+    padding-bottom: 1%;
+    margin: 0;
     font-weight: 700;
   }
   h3 {
@@ -161,9 +280,9 @@ ul { list-style:none; }
   ::-moz-selection { background-color:#262223; color:#444; }
 
   .app {
-    dispaly: block;
     margin: 0 auto;
-    width: 100%px;
+    width: 100%;
+    height: 100%;
   }
 
   /* Player */
@@ -179,8 +298,8 @@ ul { list-style:none; }
   }
 
   .player h3 {
-    line-height: 30px;
-    font-size: 30px;
+    line-height: 35px;
+    font-size: 32px;
     padding: 10px 0px 10px 0px;
     text-align: center;
     overflow: hidden;
@@ -198,21 +317,21 @@ ul { list-style:none; }
   }
 
   .play {
-    height:60px;
-    width:60px;
+    height:70px;
+    width:70px;
     background: url("../assets/play-icon-300.png");
     background-size: 100%;
     background-position: center;
     border-radius: 50%;
-    -moz-border-radius: 5%0;
+    -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border: 2px solid white;
     cursor: pointer;
 
   }
   .paused {
-    height:60px;
-    width:60px;
+    height:70px;
+    width:70px;
     background: url("../assets/paused-button.png");
     background-size: 100%;
     background-position: center;
