--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* Font Family */
-@import url(//db.onlinewebfonts.com/c/415c1cffdc1ffdf955cdd328ad4a4c87?family=Cheltenham);
+@import url(https://db.onlinewebfonts.com/c/415c1cffdc1ffdf955cdd328ad4a4c87?family=Cheltenham);
 
 @font-face {font-family: "Cheltenham";
   src: url("//db.onlinewebfonts.com/t/415c1cffdc1ffdf955cdd328ad4a4c87.eot");
