--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,9 @@ html,body,div,span,h1,h3,ul,li {
     -webkit-tap-highlight-color:rgba(0,0,0,0);
     -webkit-tap-highlight-color:transparent;
   }
+  footer {
+    font-size: 10px;
+  }
 
   /* Typography */
 
@@ -419,7 +422,9 @@ html,body,div,span,h1,h3,ul,li {
     -webkit-tap-highlight-color:rgba(0,0,0,0);
     -webkit-tap-highlight-color:transparent;
   }
-
+  footer {
+    font-size: 12px;
+  }
   /* Typography */
 
   h1, h3 { color: #ffffff; font-weight: 500; margin: 0 auto;}
@@ -560,6 +565,7 @@ html,body,div,span,h1,h3,ul,li {
     cursor: pointer;
     width: 100%;
     height: 60%;
+    border-bottom: solid 2px #222222;
 
   }
   .list-item h3 {
