--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,11 @@ html,body,div,span,h1,h3,ul,li {
   footer {
     font-size: 10px;
   }
-
+  img {
+    max-width: 75px;
+    max-heigh: 75px;
+    margin-top: 2%;
+  }
   /* Typography */
 
   h1, h3 { color: #ffffff; font-weight: 500; margin: 0 auto; }
@@ -99,9 +103,19 @@ html,body,div,span,h1,h3,ul,li {
   .app h1 {
     font-size: 50px;
     padding-top: 5%;
-    padding-bottom: 12%;
+    padding-bottom: 5%;
   }
 
+  .moto {
+    visibility: hidden;: 
+    position: absolute;
+    font-size: 18px;
+    margin-top: -7%;
+    padding-left: 5%;
+  }
+  .moto.bottom {
+    padding-left: 43%;
+  }
   /* Player */
 
   .player {
@@ -251,6 +265,10 @@ html,body,div,span,h1,h3,ul,li {
     -webkit-tap-highlight-color:transparent;
   }
 
+  img {
+    max-width: 75px;
+    max-heigh: 75px;
+  }
   /* Typography */
 
   h1, h3 { color: #ffffff; font-weight: 500; margin: 0 auto; }
@@ -425,18 +443,24 @@ html,body,div,span,h1,h3,ul,li {
   footer {
     font-size: 12px;
   }
+
+  img {
+    max-width: 150px;
+    max-heigh: 150px;
+  }
   /* Typography */
 
   h1, h3 { color: #ffffff; font-weight: 500; margin: 0 auto;}
 
   h1 {
     text-align: center;
-    font-size: 56px;
-    line-height: 60px;
+    font-size: 76px;
+    line-height: 80px;
     padding-top: 2%;
-    padding-bottom: 1%;
+    padding-bottom: 0;
     margin: 0;
-    font-weight: 700;
+    font-weight: 500;
+    letter-spacing: 1px;
   }
   h3 {
     min-height: 3em;
@@ -451,6 +475,43 @@ html,body,div,span,h1,h3,ul,li {
   }
 
   /* CSS Transitions */
+  @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+  @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+  @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+  .moto {
+    position: absolute;
+    font-weight: 500;
+    font-size: 65px;
+    margin-left: 2.5%;
+
+    opacity:0;
+    -webkit-animation:fadeIn ease-in 1;
+    -moz-animation:fadeIn ease-in 1;
+    animation:fadeIn ease-in 1;
+
+    -webkit-animation-fill-mode:forwards;
+    -moz-animation-fill-mode:forwards;
+    animation-fill-mode:forwards;
+
+    -webkit-animation-duration:1s;
+    -moz-animation-duration:1s;
+    animation-duration:1s;
+  }
+
+  .moto.top {
+    -webkit-animation-delay: 0.7s;
+    -moz-animation-delay: 0.7s;
+    animation-delay: 0.7s;
+    padding-top: 16%;
+  }
+
+  .moto.bottom {
+    -webkit-animation-delay: 2.2s;
+    -moz-animation-delay:2.2s;
+    animation-delay: 2.2s;
+    padding: 19.5% 0 0 0;
+  }
 
   * {
   -moz-transition:all 100ms ease;
@@ -469,22 +530,22 @@ html,body,div,span,h1,h3,ul,li {
     height: 100%;
   }
 
+
   /* Player */
 
   .player {
     background-color: #090909;
     font-family: Cheltenham ,Georgia;
-    margin: 0 auto 1.5%;
-    width: 25%;
+    margin: 1.5% auto 1.5%;
+    width: 30%;
     height: 10%;
     text-align: center;
-
   }
 
   .player h3 {
-    line-height: 35px;
-    font-size: 32px;
-    padding: 10px 0px 10px 0px;
+    line-height: 42px;
+    font-size: 38px;
+    padding: 2.5% 0.4% 2.5% 0.4%;
     text-align: center;
     overflow: hidden;
 
@@ -495,9 +556,11 @@ html,body,div,span,h1,h3,ul,li {
     text-align: center;
     letter-spacing: 1px;
   }
+
   /* Button state */
+
   .player button {
-    margin: 3% auto 1.5%;
+    margin: 1% auto 1.5%;
   }
 
   .play {
@@ -537,6 +600,7 @@ html,body,div,span,h1,h3,ul,li {
   }
 
   /* Article List */
+
   .article-list {
     align-text:left;
     -webkit-columns: 1;
@@ -565,12 +629,13 @@ html,body,div,span,h1,h3,ul,li {
     cursor: pointer;
     width: 100%;
     height: 60%;
-    border-bottom: solid 2px #222222;
+    border-right: solid 1px #222222;
+    border-left: solid 1px #222222;
 
   }
   .list-item h3 {
     text-align: left;
-    font-size: 28px;
+    font-size: 34px;
     height:40%;
     width: 90%;
     padding: 5% 2.5% 5% 2.5%;
@@ -584,7 +649,7 @@ html,body,div,span,h1,h3,ul,li {
     transform: scale(1.05);
   }
   div.article-list-item {
-    width: 25%;
+    width: 30%;
     height: 25%;
   }
 }
