--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,8 @@ html,body,div,span,h1,h3,ul,li {
   img {
     max-width: 75px;
     max-heigh: 75px;
-    margin-top: 2%;
+    margin-bottom: 2.5%;
+
   }
   /* Typography */
 
@@ -107,7 +108,7 @@ html,body,div,span,h1,h3,ul,li {
   }
 
   .moto {
-    visibility: hidden;: 
+    visibility: hidden;:
     position: absolute;
     font-size: 18px;
     margin-top: -7%;
@@ -129,7 +130,7 @@ html,body,div,span,h1,h3,ul,li {
 
   .player h3 {
     font-size: 26px;
-    padding: 1% 0 5% 0;
+    padding: 1% 0 2.5% 0;
     text-align: center;
     overflow: hidden;
 
@@ -139,7 +140,7 @@ html,body,div,span,h1,h3,ul,li {
   }
   /* Button state */
   .player button {
-    margin: 3% auto 1.5%;
+    margin: 1% auto 1.5%;
     background-color: #090909;
   }
 
@@ -203,7 +204,9 @@ html,body,div,span,h1,h3,ul,li {
     cursor: pointer;
     width: 100%;
     height: 60%;
-
+    border-right: 2px solid #231F20;
+    border-left: 2px solid #231F20;
+    border-top: 1px solid #231F20;
   }
   .list-item h3 {
     text-align: left;
